--- a/next.js-tutorial/package.json
+++ b/next.js-tutorial/package.json
@@ -1,5 +1,10 @@
 {
   "name": "next.js-tutorial",
   "version": "0.0.1",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "next": "^2.1.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  }
 }
