--- a/next.js-tutorial/package.json
+++ b/next.js-tutorial/package.json
@@ -2,6 +2,9 @@
   "name": "next.js-tutorial",
   "version": "0.0.1",
   "license": "MIT",
+  "scripts": {
+    "dev": "next"
+  },
   "dependencies": {
     "next": "^2.1.1",
     "react": "^15.5.4",
