--- a/next.js-tutorial/package.json
+++ b/next.js-tutorial/package.json
@@ -6,6 +6,7 @@
     "dev": "next"
   },
   "dependencies": {
+    "express": "^4.15.2",
     "next": "^2.1.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
