:wrench: Fix dev script

--- a/next.js-tutorial/package.json
+++ b/next.js-tutorial/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "next"
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.15.2",
