--- a/hello-next/package.json
+++ b/hello-next/package.json
@@ -2,5 +2,16 @@
   "name": "hello-next",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "next": "7.0.0",
+    "react": "16.5.2",
+    "react-dom": "16.5.2"
+  },
+  {
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  }
 }
